src/test/deca/syntax/parser/valid/method_call_simple_print.deca
// Parser test, method call with a print

class Printer {
    void testMethod() {
        println("Bonjour");
    }
}

{
    Printer printer = new Printer();
    printer.testMethod();
}