src/test/deca/syntax/parser/invalid/class_definition_with_symbole.deca
// Parser test, class with a special character declared

class ! {
    
}